Fixed non-wrapping left sidebar title

--- a/Web/Content/css/Page.less
+++ b/Web/Content/css/Page.less
@@ -1,3 +1,2 @@
 .left-sidebar-title {
-	white-space: nowrap;
 }
